--- a/webapp/templates/attack/software.html
+++ b/webapp/templates/attack/software.html
@@ -53,12 +53,14 @@
                         <thead>
                             <tr>
                                 <th>ID</th>
-                                <th>名称</th>
+                                <th>名称(EN)</th>
+                                <th>名称(ZH)</th>
                                 <th>别名</th>
-                                <th>描述信息</th>
+                                <th>描述信息(EN)</th>
+                                <th>描述信息(ZH)</th>
                                 <th>应用平台</th>
-                                <th>数据类型</th>
-                                <th>版本号</th>
+<!--                                <th>数据类型</th>-->
+<!--                                <th>版本号</th>-->
 {#                                <th>创建时间</th>#}
 {#                                <th>修改时间</th>#}
 {#                                <th>贡献者</th>#}
@@ -98,15 +100,27 @@
                                             </div>
                                         </div>
                                         <div class="form-group row">
-                                            <label class="col-sm-2 col-form-label">名称</label>
+                                            <label class="col-sm-2 col-form-label">名称(EN)</label>
                                             <div class="col-sm-10">
                                               <input type="text" class="form-control" name="name" required="required">
                                             </div>
                                         </div>
                                         <div class="form-group row">
-                                            <label class="col-sm-2 col-form-label">描述信息</label>
+                                            <label class="col-sm-2 col-form-label">描述信息(EN)</label>
                                             <div class="col-sm-10">
                                               <input type="text" class="form-control" name="description">
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label class="col-sm-2 col-form-label">名称(ZH)</label>
+                                            <div class="col-sm-10">
+                                              <input type="text" class="form-control" name="name_zh" required="required">
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label class="col-sm-2 col-form-label">描述信息(ZH)</label>
+                                            <div class="col-sm-10">
+                                              <input type="text" class="form-control" name="description_zh">
                                             </div>
                                         </div>
                                         <div class="form-group row">
@@ -195,15 +209,27 @@
                                             </div>
                                         </div>
                                         <div class="form-group row">
-                                            <label class="col-sm-2 col-form-label">名称</label>
+                                            <label class="col-sm-2 col-form-label">名称(EN)</label>
                                             <div class="col-sm-10">
                                               <input type="text" class="form-control" name="name" required="required">
                                             </div>
                                         </div>
                                         <div class="form-group row">
-                                            <label class="col-sm-2 col-form-label">描述信息</label>
+                                            <label class="col-sm-2 col-form-label">描述信息(EN)</label>
                                             <div class="col-sm-10">
                                               <input type="text" class="form-control" name="description">
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label class="col-sm-2 col-form-label">名称(ZH)</label>
+                                            <div class="col-sm-10">
+                                              <input type="text" class="form-control" name="name_zh" required="required">
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label class="col-sm-2 col-form-label">描述信息(ZH)</label>
+                                            <div class="col-sm-10">
+                                              <input type="text" class="form-control" name="description_zh">
                                             </div>
                                         </div>
                                         <div class="form-group row">
@@ -368,6 +394,18 @@
         return (
             '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">' +
             '<tr>' +
+            '<td>数据类型</td>' +
+            '<td>' +
+            d.type +
+            '</td>' +
+            '</tr>' +
+            '<tr>' +
+            '<td>版本号</td>' +
+            '<td>' +
+            d.version +
+            '</td>' +
+            '</tr>' +
+            '<tr>' +
             '<td>创建时间</td>' +
             '<td>' +
             d.created +
@@ -435,18 +473,23 @@
         "bProcessing": true, //显示数据加载中\
         "createdRow": function( row, data, dataIndex ) {
            if(data.description.length > remarkShowLength){//只有超长，才有td点击事件
-              $(row).children('td').eq(3).attr('ondblclick','javascript:changeShowRemarks(this);');
+              $(row).children('td').eq(4).attr('ondblclick','javascript:changeShowRemarks(this);');
+           }
+           if(data.description_zh.length > remarkShowLength){//只有超长，才有td点击事件
+              $(row).children('td').eq(5).attr('ondblclick','javascript:changeShowRemarks(this);');
            }
            if(data.aliases.length > remarkShowLength){//只有超长，才有td点击事件
-              $(row).children('td').eq(2).attr('ondblclick','javascript:changeShowRemarks(this);');
+              $(row).children('td').eq(3).attr('ondblclick','javascript:changeShowRemarks(this);');
            }
-           $(row).children('td').eq(3).attr('content',data.description);
-           $(row).children('td').eq(2).attr('content',data.aliases);
+           $(row).children('td').eq(4).attr('content',data.description);
+           $(row).children('td').eq(5).attr('content',data.description_zh);
+           $(row).children('td').eq(3).attr('content',data.aliases);
          },
         ajax: '/attack/software/data/',
         columns: [
             { data: 'ID' },
             { data: 'name' },
+            { data: 'name_zh' },
             { data: 'aliases' ,
                 "render": function (data, type, full, meta) {
                     if (full.aliases.length > remarkShowLength) {
@@ -465,9 +508,18 @@
                         }
                     }
             },
+            { data: 'description_zh' ,
+                "render": function (data, type, full, meta) {
+                    if (full.description_zh.length > remarkShowLength) {
+                     return getPartialRemarksHtml(full.description_zh);//显示部分信息
+                    } else {
+                        return full.description_zh;//显示原始全部信息
+                        }
+                    }
+            },
             { data: 'platforms' },
-            { data: 'type' },
-            { data: 'version' },
+            // { data: 'type' },
+            // { data: 'version' },
             {#{ data: 'created' },#}
             {#{ data: 'last modified' },#}
             {#{ data: 'contributors' },#}
