--- a/webapp/templates/attack/tactics.html
+++ b/webapp/templates/attack/tactics.html
@@ -54,12 +54,14 @@
                             <tr>
 {#                                <th>序号</th>#}
                                 <th>ID</th>
-                                <th>名称</th>
-                                <th>描述信息</th>
+                                <th>名称(EN)</th>
+                                <th>名称(ZH)</th>
+                                <th>描述信息(EN)</th>
+                                <th>描述信息(ZH)</th>
                                 <th>信息链接</th>
                                 <th>创建时间</th>
-                                <th>修改时间</th>
-                                <th>版本号</th>
+<!--                                <th>修改时间</th>-->
+<!--                                <th>版本号</th>-->
                                 <th>查看</th>
                                 <th>操作</th>
                             </tr>
@@ -94,15 +96,27 @@
                                             </div>
                                         </div>
                                         <div class="form-group row">
-                                            <label class="col-sm-2 col-form-label">名称</label>
+                                            <label class="col-sm-2 col-form-label">名称(EN)</label>
                                             <div class="col-sm-10">
                                               <input type="text" class="form-control" name="name" required="required">
                                             </div>
                                         </div>
                                         <div class="form-group row">
-                                            <label class="col-sm-2 col-form-label">描述信息</label>
+                                            <label class="col-sm-2 col-form-label">名称(ZH)</label>
                                             <div class="col-sm-10">
-                                              <input type="text" class="form-control" name="description">
+                                              <input type="text" class="form-control" name="name_zh" required="required">
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label class="col-sm-2 col-form-label">描述信息(EN)</label>
+                                            <div class="col-sm-10">
+                                              <input type="text" class="form-control" name="description" required="required">
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label class="col-sm-2 col-form-label">描述信息(ZH)</label>
+                                            <div class="col-sm-10">
+                                              <input type="text" class="form-control" name="description_zh">
                                             </div>
                                         </div>
                                         <div class="form-group row">
@@ -161,15 +175,27 @@
                                             </div>
                                         </div>
                                         <div class="form-group row">
-                                            <label class="col-sm-2 col-form-label">名称</label>
+                                            <label class="col-sm-2 col-form-label">名称(EN)</label>
                                             <div class="col-sm-10">
                                               <input type="text" class="form-control" name="name" required="required">
                                             </div>
                                         </div>
                                         <div class="form-group row">
-                                            <label class="col-sm-2 col-form-label">描述信息</label>
+                                            <label class="col-sm-2 col-form-label">描述信息(EN)</label>
                                             <div class="col-sm-10">
                                               <input type="text" class="form-control" name="description">
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label class="col-sm-2 col-form-label">名称(ZH)</label>
+                                            <div class="col-sm-10">
+                                              <input type="text" class="form-control" name="name_zh" required="required">
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label class="col-sm-2 col-form-label">描述信息(ZH)</label>
+                                            <div class="col-sm-10">
+                                              <input type="text" class="form-control" name="description_zh">
                                             </div>
                                         </div>
                                         <div class="form-group row">
@@ -303,6 +329,18 @@
         //详情
         return (
             '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">' +
+            '<tr>' +
+            '<td>修改日期</td>' +
+            '<td>' +
+            d['last modified'] +
+            '</td>' +
+            '</tr>' +
+            '<tr>' +
+            '<td>版本号</td>' +
+            '<td>' +
+            d.version +
+            '</td>' +
+            '</tr>' +
             {#'<tr>' +#}
             {#'<td>Full name:</td>' +#}
             {#'<td>' +#}
@@ -358,24 +396,38 @@
         "bProcessing": true, //显示数据加载中\
         "createdRow": function( row, data, dataIndex ) {
            if(data.description.length > remarkShowLength){//只有超长，才有td点击事件
-              $(row).children('td').eq(2).attr('ondblclick','javascript:changeShowRemarks(this);');
-           }
-           if(data.url.length > remarkShowLength){//只有超长，才有td点击事件
               $(row).children('td').eq(3).attr('ondblclick','javascript:changeShowRemarks(this);');
            }
-           $(row).children('td').eq(2).attr('content',data.description);
-           $(row).children('td').eq(3).attr('content',data.url);
+           if(data.description_zh.length > remarkShowLength){//只有超长，才有td点击事件
+              $(row).children('td').eq(4).attr('ondblclick','javascript:changeShowRemarks(this);');
+           }
+           if(data.url.length > remarkShowLength){//只有超长，才有td点击事件
+              $(row).children('td').eq(5).attr('ondblclick','javascript:changeShowRemarks(this);');
+           }
+           $(row).children('td').eq(3).attr('content',data.description);
+           $(row).children('td').eq(4).attr('content',data.description_zh);
+           $(row).children('td').eq(5).attr('content',data.url);
          },
         ajax: '/attack/tactics/data/',
         columns: [
             { data: 'ID' },
             { data: 'name' },
+            { data: 'name_zh' },
             { data: 'description' ,
                 "render": function (data, type, full, meta) {
                     if (full.description.length > remarkShowLength) {
                      return getPartialRemarksHtml(full.description);//显示部分信息
                     } else {
                         return full.description;//显示原始全部信息
+                        }
+                    }
+            },
+            { data: 'description_zh' ,
+                "render": function (data, type, full, meta) {
+                    if (full.description_zh.length > remarkShowLength) {
+                     return getPartialRemarksHtml(full.description_zh);//显示部分信息
+                    } else {
+                        return full.description_zh;//显示原始全部信息
                         }
                     }
             },
@@ -389,8 +441,8 @@
                     }
             },
             { data: 'created' },
-            { data: 'last modified'},
-            { data: 'version' },
+            // { data: 'last modified'},
+            // { data: 'version' },
             {
                 "className": 'dt-control',
                 "orderable": false,
