--- a/webapp/templates/attack/data_sources.html
+++ b/webapp/templates/attack/data_sources.html
@@ -53,11 +53,13 @@
                         <thead>
                             <tr>
                                 <th>ID</th>
-                                <th>名称</th>
-                                <th>描述信息</th>
+                                <th>名称(EN)</th>
+                                <th>名称(ZH)</th>
+                                <th>描述信息(EN)</th>
+                                <th>描述信息(ZH)</th>
                                 <th>应用平台</th>
-                                <th>集合层</th>
-                                <th>创建时间</th>
+<!--                                <th>集合层</th>-->
+<!--                                <th>创建时间</th>-->
                                 <th>查看</th>
                                 <th>操作</th>
                             </tr>
@@ -91,29 +93,40 @@
                                               <input type="text" class="form-control" name="ID" required="required">
                                             </div>
                                         </div>
-                                        <div class="form-group row">
-                                            <label class="col-sm-2 col-form-label">名称</label>
+                                            <label class="col-sm-2 col-form-label">名称(EN)</label>
                                             <div class="col-sm-10">
                                               <input type="text" class="form-control" name="name" required="required">
                                             </div>
                                         </div>
                                         <div class="form-group row">
-                                            <label class="col-sm-2 col-form-label">描述信息</label>
+                                            <label class="col-sm-2 col-form-label">描述信息(EN)</label>
                                             <div class="col-sm-10">
                                               <input type="text" class="form-control" name="description">
                                             </div>
                                         </div>
                                         <div class="form-group row">
-                                            <label class="col-sm-2 col-form-label">集合层</label>
+                                            <label class="col-sm-2 col-form-label">名称(ZH)</label>
                                             <div class="col-sm-10">
-                                              <input type="text" class="form-control" name="collection layers">
+                                              <input type="text" class="form-control" name="name_zh" required="required">
                                             </div>
                                         </div>
                                         <div class="form-group row">
-                                            <label class="col-sm-2 col-form-label">应用平台</label>
+                                            <label class="col-sm-2 col-form-label">描述信息(ZH)</label>
                                             <div class="col-sm-10">
-                                              <input type="text" class="form-control" name="platforms">
+                                              <input type="text" class="form-control" name="description_zh">
                                             </div>
+                                        </div>
+                                        <div class="form-group row">
+                                             <label class="col-sm-2 col-form-label">集合层</label>
+                                             <div class="col-sm-10">
+                                               <input type="text" class="form-control" name="collection layers">
+                                             </div>
+                                        </div>
+                                        <div class="form-group row">
+                                             <label class="col-sm-2 col-form-label">应用平台</label>
+                                             <div class="col-sm-10">
+                                               <input type="text" class="form-control" name="platforms">
+                                             </div>
                                         </div>
 {#                                        <div class="form-group row" style="text-align: center">#}
 {#                                            <label class="col-sm-2 col-form-label">created</label>#}
@@ -182,16 +195,27 @@
                                               <input type="text" class="form-control" name="ID" required="required">
                                             </div>
                                         </div>
-                                        <div class="form-group row">
-                                            <label class="col-sm-2 col-form-label">名称</label>
+                                            <label class="col-sm-2 col-form-label">名称(EN)</label>
                                             <div class="col-sm-10">
                                               <input type="text" class="form-control" name="name" required="required">
                                             </div>
                                         </div>
                                         <div class="form-group row">
-                                            <label class="col-sm-2 col-form-label">描述信息</label>
+                                            <label class="col-sm-2 col-form-label">描述信息(EN)</label>
                                             <div class="col-sm-10">
                                               <input type="text" class="form-control" name="description">
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label class="col-sm-2 col-form-label">名称(ZH)</label>
+                                            <div class="col-sm-10">
+                                              <input type="text" class="form-control" name="name_zh" required="required">
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label class="col-sm-2 col-form-label">描述信息(ZH)</label>
+                                            <div class="col-sm-10">
+                                              <input type="text" class="form-control" name="description_zh">
                                             </div>
                                         </div>
                                         <div class="form-group row">
@@ -350,6 +374,18 @@
         return (
             '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">' +
             '<tr>' +
+            '<td>集合层</td>' +
+            '<td>' +
+            d['collection layers'] +
+            '</td>' +
+            '</tr>' +
+            '<tr>' +
+            '<td>创建时间</td>' +
+            '<td>' +
+            d.created +
+            '</td>' +
+            '</tr>' +
+            '<tr>' +
             '<td>修改时间</td>' +
             '<td>' +
             d.modified +
@@ -417,14 +453,19 @@
         "bProcessing": true, //显示数据加载中\
         "createdRow": function( row, data, dataIndex ) {
            if(data.description.length > remarkShowLength){//只有超长，才有td点击事件
-              $(row).children('td').eq(2).attr('ondblclick','javascript:changeShowRemarks(this);');
+              $(row).children('td').eq(3).attr('ondblclick','javascript:changeShowRemarks(this);');
            }
-           $(row).children('td').eq(2).attr('content',data.description);
+           if(data.description_zh.length > remarkShowLength){//只有超长，才有td点击事件
+                $(row).children('td').eq(4).attr('ondblclick','javascript:changeShowRemarks(this);');
+            }
+           $(row).children('td').eq(3).attr('content',data.description);
+           $(row).children('td').eq(4).attr('content',data.description_zh);
          },
         ajax: '/attack/data_sources/data/',
         columns: [
             { data: 'ID' },
             { data: 'name' },
+            { data: 'name_zh' },
             { data: 'description' ,
                 "render": function (data, type, full, meta) {
                     if (full.description.length > remarkShowLength) {
@@ -434,9 +475,18 @@
                         }
                     }
             },
+            { data: 'description_zh' ,
+                "render": function (data, type, full, meta) {
+                    if (full.description_zh.length > remarkShowLength) {
+                     return getPartialRemarksHtml(full.description_zh);//显示部分信息
+                    } else {
+                        return full.description_zh;//显示原始全部信息
+                        }
+                    }
+            },
             { data: 'platforms' },
-            { data: 'collection layers' },
-            { data: 'created' },
+            // { data: 'collection layers' },
+            // { data: 'created' },
             {
                 "className": 'dt-control',
                 "orderable": false,
