--- a/webapp/templates/attack/datasource_component.html
+++ b/webapp/templates/attack/datasource_component.html
@@ -52,17 +52,18 @@
                     <table id="example" class="table table-bordered table-striped display">
                         <thead>
                             <tr>
-                                <th>名称</th>
-                                <th>数据源</th>
-                                <th>描述信息</th>
-                                <th>应用平台</th>
-                                <th>集合层</th>
-                                <th>创建时间</th>
-                                <th>修改时间</th>
-
+                                <th>名称(EN)</th>
+                                <th>名称(ZH)</th>
+                                <th>数据源(EN)</th>
+                                <th>描述信息(EN)</th>
+                                <th>描述信息(ZH)</th>
+                                <th>数据类型</th>}
+                                <th>版本号</th>}
+<!--                                <th>创建时间</th>-->
+<!--                                <th>修改时间</th>-->
 {#                                <th>贡献者</th>#}
-{#                                <th>数据类型</th>#}
-{#                                <th>版本号</th>#}
+<!--                                <th>应用平台</th>-->
+<!--                                <th>集合层</th>-->
 {#                                <th>信息连接</th>#}
                                 <th>查看</th>
                                 <th>操作</th>
@@ -98,15 +99,27 @@
 {#                                            </div>#}
 {#                                        </div>#}
                                         <div class="form-group row">
-                                            <label class="col-sm-2 col-form-label">名称</label>
+                                            <label class="col-sm-2 col-form-label">名称(EN)</label>
                                             <div class="col-sm-10">
                                               <input type="text" class="form-control" name="name" required="required">
                                             </div>
                                         </div>
                                         <div class="form-group row">
-                                            <label class="col-sm-2 col-form-label">描述信息</label>
+                                            <label class="col-sm-2 col-form-label">描述信息(EN)</label>
                                             <div class="col-sm-10">
                                               <input type="text" class="form-control" name="description">
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label class="col-sm-2 col-form-label">名称(ZH)</label>
+                                            <div class="col-sm-10">
+                                              <input type="text" class="form-control" name="name_zh" required="required">
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label class="col-sm-2 col-form-label">描述信息(ZH)</label>
+                                            <div class="col-sm-10">
+                                              <input type="text" class="form-control" name="description_zh">
                                             </div>
                                         </div>
                                         <div class="form-group row">
@@ -195,15 +208,27 @@
 {#                                            </div>#}
 {#                                        </div>#}
                                         <div class="form-group row">
-                                            <label class="col-sm-2 col-form-label">名称</label>
+                                            <label class="col-sm-2 col-form-label">名称(EN)</label>
                                             <div class="col-sm-10">
                                               <input type="text" class="form-control" name="name" required="required">
                                             </div>
                                         </div>
                                         <div class="form-group row">
-                                            <label class="col-sm-2 col-form-label">描述信息</label>
+                                            <label class="col-sm-2 col-form-label">描述信息(EN)</label>
                                             <div class="col-sm-10">
                                               <input type="text" class="form-control" name="description">
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label class="col-sm-2 col-form-label">名称(ZH)</label>
+                                            <div class="col-sm-10">
+                                              <input type="text" class="form-control" name="name_zh" required="required">
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label class="col-sm-2 col-form-label">描述信息(ZH)</label>
+                                            <div class="col-sm-10">
+                                              <input type="text" class="form-control" name="description_zh">
                                             </div>
                                         </div>
                                         <div class="form-group row">
@@ -368,21 +393,33 @@
         return (
             '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">' +
             '<tr>' +
+            '<td>创建时间</td>' +
+            '<td>' +
+            d.created +
+            '</td>' +
+            '</tr>' +
+            '<tr>' +
+            '<td>修改时间</td>' +
+            '<td>' +
+            d.modified +
+            '</td>' +
+            '</tr>' +
+            '<tr>' +
             '<td>贡献者</td>' +
             '<td>' +
             d.contributors +
             '</td>' +
             '</tr>' +
             '<tr>' +
-            '<td>数据类型</td>' +
+            '<td>应用平台</td>' +
             '<td>' +
-            d.type +
+            d.platforms +
             '</td>' +
             '</tr>' +
             '<tr>' +
-            '<td>版本号</td>' +
+            '<td>集合层</td>' +
             '<td>' +
-            d.version +
+            d['collection layers'] +
             '</td>' +
             '</tr>' +
             '<tr>' +
@@ -429,13 +466,18 @@
         "bProcessing": true, //显示数据加载中\
         "createdRow": function( row, data, dataIndex ) {
            if(data.description.length > remarkShowLength){//只有超长，才有td点击事件
-              $(row).children('td').eq(2).attr('ondblclick','javascript:changeShowRemarks(this);');
+              $(row).children('td').eq(3).attr('ondblclick','javascript:changeShowRemarks(this);');
            }
-           $(row).children('td').eq(2).attr('content',data.description);
+           if(data.description_zh.length > remarkShowLength){//只有超长，才有td点击事件
+               $(row).children('td').eq(4).attr('ondblclick','javascript:changeShowRemarks(this);');
+            }
+           $(row).children('td').eq(3).attr('content',data.description);
+           $(row).children('td').eq(4).attr('content',data.description_zh);
          },
         ajax: '/attack/datasource_component/data/',
         columns: [
             { data: 'name' },
+            { data: 'name_zh' },
             { data: 'datasource' },
             { data: 'description' ,
                 "render": function (data, type, full, meta) {
@@ -446,10 +488,20 @@
                         }
                     }
             },
-            { data: 'platforms' },
-            { data: 'collection layers' },
-            { data: 'created' },
-            { data: 'modified' },
+            { data: 'description_zh' ,
+                "render": function (data, type, full, meta) {
+                    if (full.description_zh.length > remarkShowLength) {
+                     return getPartialRemarksHtml(full.description_zh);//显示部分信息
+                    } else {
+                        return full.description_zh;//显示原始全部信息
+                        }
+                    }
+            },
+            { data: 'type' },
+            { data: 'version' },
+            // { data: 'collection layers' },
+            // { data: 'created' },
+            // { data: 'modified' },
             {#{ data: 'contributors' },#}
             {#{ data: 'type' },#}
             {#{ data: 'version' },#}
