--- a/webapp/templates/attack/organization.html
+++ b/webapp/templates/attack/organization.html
@@ -53,12 +53,14 @@
                         <thead>
                             <tr>
                                 <th>ID</th>
-                                <th>名称</th>
-                                <th>描述信息</th>
+                                <th>名称(EN)</th>
+                                <th>名称(ZH)</th>
+                                <th>描述信息(EN)</th>
+                                <th>描述信息(ZH)</th>
                                 <th>创建时间</th>
                                 <th>修改时间</th>
-                                <th>版本号</th>
-                                <th>贡献者</th>
+<!--                                <th>版本号</th>-->
+<!--                                <th>贡献者</th>-->
 {#                                <th>关联组织</th>#}
 {#                                <th>关联组织引用信息</th>#}
 {#                                <th>关系引用</th>#}
@@ -97,15 +99,27 @@
                                             </div>
                                         </div>
                                         <div class="form-group row">
-                                            <label class="col-sm-2 col-form-label">名称</label>
+                                            <label class="col-sm-2 col-form-label">名称(EN)</label>
                                             <div class="col-sm-10">
                                               <input type="text" class="form-control" name="name" required="required">
                                             </div>
                                         </div>
                                         <div class="form-group row">
-                                            <label class="col-sm-2 col-form-label">描述信息</label>
+                                            <label class="col-sm-2 col-form-label">描述信息(EN)</label>
                                             <div class="col-sm-10">
                                               <input type="text" class="form-control" name="description">
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label class="col-sm-2 col-form-label">名称(ZH)</label>
+                                            <div class="col-sm-10">
+                                              <input type="text" class="form-control" name="name_zh" required="required">
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label class="col-sm-2 col-form-label">描述信息(ZH)</label>
+                                            <div class="col-sm-10">
+                                              <input type="text" class="form-control" name="description_zh">
                                             </div>
                                         </div>
                                         <div class="form-group row">
@@ -188,17 +202,30 @@
                                             </div>
                                         </div>
                                         <div class="form-group row">
-                                            <label class="col-sm-2 col-form-label">名称</label>
+                                            <label class="col-sm-2 col-form-label">名称(EN)</label>
                                             <div class="col-sm-10">
                                               <input type="text" class="form-control" name="name" required="required">
                                             </div>
                                         </div>
                                         <div class="form-group row">
-                                            <label class="col-sm-2 col-form-label">描述信息</label>
+                                            <label class="col-sm-2 col-form-label">描述信息(EN)</label>
                                             <div class="col-sm-10">
                                               <input type="text" class="form-control" name="description">
                                             </div>
                                         </div>
+                                        <div class="form-group row">
+                                            <label class="col-sm-2 col-form-label">名称(ZH)</label>
+                                            <div class="col-sm-10">
+                                              <input type="text" class="form-control" name="name_zh" required="required">
+                                            </div>
+                                        </div>
+                                        <div class="form-group row">
+                                            <label class="col-sm-2 col-form-label">描述信息(ZH)</label>
+                                            <div class="col-sm-10">
+                                              <input type="text" class="form-control" name="description_zh">
+                                            </div>
+                                        </div>
+
                                         <div class="form-group row">
                                             <label class="col-sm-2 col-form-label">信息链接</label>
                                             <div class="col-sm-10">
@@ -355,6 +382,18 @@
         return (
             '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">' +
             '<tr>' +
+            '<td>版本号</td>' +
+            '<td>' +
+            d.version +
+            '</td>' +
+            '</tr>' +
+            '<tr>' +
+            '<td>贡献者</td>' +
+            '<td>' +
+            d.contributors +
+            '</td>' +
+            '</tr>' +
+            '<tr>' +
             '<td>关联组织</td>' +
             '<td>' +
             d['associated groups']+
@@ -416,18 +455,23 @@
         "bProcessing": true, //显示数据加载中\
         "createdRow": function( row, data, dataIndex ) {
            if(data.description.length > remarkShowLength){//只有超长，才有td点击事件
-              $(row).children('td').eq(2).attr('ondblclick','javascript:changeShowRemarks(this);');
+              $(row).children('td').eq(3).attr('ondblclick','javascript:changeShowRemarks(this);');
+           }
+           if(data.description_zh.length > remarkShowLength){//只有超长，才有td点击事件
+              $(row).children('td').eq(4).attr('ondblclick','javascript:changeShowRemarks(this);');
            }
            if(data.contributors.length > remarkShowLength) {
-               $(row).children('td').eq(6).attr('ondblclick', 'javascript:changeShowRemarks(this);');
+               $(row).children('td').eq(8).attr('ondblclick', 'javascript:changeShowRemarks(this);');
            }
-           $(row).children('td').eq(2).attr('content',data.description);
-           $(row).children('td').eq(6).attr('content',data.contributors);
+           $(row).children('td').eq(3).attr('content',data.description);
+           $(row).children('td').eq(4).attr('content',data.description_zh);
+           $(row).children('td').eq(8).attr('content',data.contributors);
          },
         ajax: '/attack/organization/data/',
         columns: [
             { data: 'ID' },
             { data: 'name' },
+            { data: 'name_zh' },
             { data: 'description' ,
                 "render": function (data, type, full, meta) {
                     if (full.description.length > remarkShowLength) {
@@ -437,18 +481,27 @@
                         }
                     }
             },
-            { data: 'created' },
-            { data: 'last modified' },
-            { data: 'version' },
-            { data: 'contributors' ,
+            { data: 'description_zh' ,
                 "render": function (data, type, full, meta) {
-                    if (full.contributors.length > remarkShowLength) {
-                     return getPartialRemarksHtml(full.contributors);//显示部分信息
+                    if (full.description_zh.length > remarkShowLength) {
+                     return getPartialRemarksHtml(full.description_zh);//显示部分信息
                     } else {
-                        return full.contributors;//显示原始全部信息
+                        return full.description_zh;//显示原始全部信息
                         }
                     }
             },
+            { data: 'created' },
+            { data: 'last modified' },
+            // { data: 'version' },
+            // { data: 'contributors' ,
+            //     "render": function (data, type, full, meta) {
+            //         if (full.contributors.length > remarkShowLength) {
+            //          return getPartialRemarksHtml(full.contributors);//显示部分信息
+            //         } else {
+            //             return full.contributors;//显示原始全部信息
+            //             }
+            //         }
+            // },
             {#{ data: 'associated groups' },#}
             {#{ data: 'associated groups citations' },#}
             {#{ data: 'relationship citations' },#}
